tests/error/extend_typedef.gw
// [contains] cannot extend typedef'd array
typedef Object[2] Class;
class C extends Class {}
C c;
<<<c>>>;
